# SimulazioneBoids_riconsegna_LorenzoNasi

./: CMakeLists.txt  CMakeLists.txtt  README.md  SFMLboid.cpp  SFMLboid.hpp  base_run.cpp  base_run_3d.cpp  boi4deb4.cpp  boidcleanup.cpp  boidcleanup.hpp  boidcleanup.test.cpp  boidcleanup.tpp  boids.cpp  boids.hpp  boids.test.cpp  boids.test3d.cpp  boids.tpp  boidsfml.cpp  distance.txt  distance3d.txt  doublevec.cpp  doublevec.hpp  flock_data.C  mainprova.cpp  parameters.txt  parameters3d.txt  parametersfml.txt  parametersfml3d.txt  parametri.txt  parametri3d.txt  parametrisfml.txt  pos.txt  pos3d.txt  pos_mod.txt  pos_mod3d.txt  prova3d.cpp  sfmlboids.cpp  sfmlboids.hpp  sfmlboids.tpp  sfmlinterface.cpp  (+10 more)
data/: distance.txt  distance3d.txt  pos.txt  pos3d.txt  pos_mod.txt  pos_mod3d.txt  vel.txt  vel3d.txt  vel_mod.txt  vel_mod3d.txt
